--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <o:officedocumentsettings><o:allowpng/><o:pixelsperinch>96</o:pixelsperinch></o:officedocumentsettings>
 </xml>
 <![endif]-->
-<link rel="stylesheet" type="text/css" href="styles.css" />
+<style type="text/css">
+
+</style>
 <style type="text/css">
 #outlook a{
     padding:0;
@@ -29,46 +31,44 @@
 .ExternalClass div{
     line-height: 100%;
 }
-
-
 </style>
 </head>
-<body>
-<table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
+<body style="margin-top:0 !important;margin-bottom:0 !important;margin-right:0 !important;margin-left:0 !important;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-color:#ffffff;width:100% !important;" >
+<table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
-    <td align="center" valign="top"><center>
-        <img src="top.jpg" alt="" width="938" height="340" align="center" class="img600" /></center></td>
+    <td align="center" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" ><center>
+        <img src="https://fomenko2v.github.io/max_cuprum/top.jpg" alt="" width="938" height="340" align="center" class="img600" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:600px;height:auto;" /></center></td>
 </tr>
 <tr>
-    <td height="145" align="center" valign="middle" style="padding-left: 10px;padding-right: 10px;">
-        <p class="h1">Ваш заказ отправлен!</p>
+    <td height="145" align="center" valign="middle" style="padding-left:10px;padding-right:10px;padding-top:0;padding-bottom:0;" >
+        <p class="h1" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#beab6e;text-align:center;font-size:30px;line-height:34px;font-weight:bold;Margin-bottom:0px;" >Ваш заказ отправлен!</p>
     </td>
 </tr>
 <tr>
-    <td align="center" valign="top" class="good_day">
-<center class="wrapper">
-<div class="webkit">
+    <td align="center" valign="top" class="good_day" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(https://fomenko2v.github.io/max_cuprum/bgi.jpg);background-position:top center;background-repeat:no-repeat;" >
+<center class="wrapper" style="width:100%;table-layout:fixed;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;" >
+<div class="webkit" style="max-width:600px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;" >
 <!--[if (gte mso 9)|(IE)]>
-<table width="600" align="center">
+<table width="600" align="center" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
-<td>
+<td style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <![endif]-->
-<table class="outer" align="center" role="presentation" cellpadding="0" cellspacing="0" border="0">
+<table class="outer" align="center" role="presentation" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0 auto;width:100%;max-width:600px;border-collapse:collapse;" >
 <tr>
-<td align="center" valign="top">
-<center><img src="arab_top.png" alt="" width="400" height="95" class="img400" /></center>
+<td align="center" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+<center><img src="https://fomenko2v.github.io/max_cuprum/arab_top.png" alt="" width="400" height="95" class="img400" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:400px;height:auto;" /></center>
 </td>
 </tr>
 <tr>
-    <td height="145" align="center" valign="middle"style="padding-left: 10px;padding-right: 10px;">
-        <p class="p1"><strong>Добрый день! Ваш заказ №1123</strong> <br />
+    <td height="145" align="center" valign="middle" style="padding-left:10px;padding-right:10px;padding-top:0;padding-bottom:0;" >
+        <p class="p1" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#2b2928;text-align:center;font-size:14px;line-height:26px;font-weight:normal;Margin-bottom:10px;" ><strong>Добрый день! Ваш заказ №1123</strong> <br />
 выслан транспортной компанией «EMS», для отслеживания местонахождения <br />
 Вашего заказа <strong>трек-номер: 5569-9875-5569</strong> </p>
     </td>
 </tr>
 <tr>
-<td align="center" valign="top">
-<center><img src="arab_bottom.png" alt="" width="400" height="95" class="img400" /></center>
+<td align="center" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+<center><img src="https://fomenko2v.github.io/max_cuprum/arab_bottom.png" alt="" width="400" height="95" class="img400" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:400px;height:auto;" /></center>
 </td>
 </tr>
 </table>
@@ -82,28 +82,28 @@
     </td>
 </tr>
 <tr>
-    <td class="cover" align="center">
-<center class="wrapper">
-<div class="webkit">
+    <td class="cover" align="center" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(https://fomenko2v.github.io/max_cuprum/bgi2.jpg);background-position:top center;background-repeat:no-repeat;" >
+<center class="wrapper" style="width:100%;table-layout:fixed;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;" >
+<div class="webkit" style="max-width:600px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;" >
 <!--[if (gte mso 9)|(IE)]>
-<table width="600" align="center">
+<table width="600" align="center" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
-<td>
+<td style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <![endif]-->
-<table class="outer" align="center" cellpadding="0" cellspacing="0" border="0">
+<table class="outer" align="center" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0 auto;width:100%;max-width:600px;border-collapse:collapse;" >
 <tr>
-    <td align="right" valign="top">
+    <td align="right" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <!--[if (gte mso 9)|(IE)]>
-<table width="300" align="right">
+<table width="300" align="right" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
-<td>
+<td style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <![endif]-->
-<table class="outer300" align="right" cellpadding="0" cellspacing="0" border="0">
+<table class="outer300" align="right" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0;width:100%;max-width:300px;border-collapse:collapse;" >
 <tr>
-    <td style="padding-top: 20px;padding-bottom: 20px;">
-        <div style="padding-top: 20px;padding-bottom: 5px;padding-left: 10px;background-color: #f9f7eb;">
-<p class="p2">Груз упакован надлежащим образом и застрахован на полную стоимость товара, поэтому при получении внимательно осмотрите упаковку. Если Вы заметите какие-либо механические повреждения упаковки, вскройте груз в присутствии сотрудника транспортной компании и осмотрите товар. Если товар также повреждён, то составьте акт о возмещении стоимости испорченного товара и сделайте также фотографию повреждённой упаковки и груза, после чего свяжитесь с нами. </p>
-<p class="p2">
+    <td style="padding-top:20px;padding-bottom:20px;padding-right:0;padding-left:0;" >
+        <div style="padding-top:20px;padding-bottom:5px;padding-left:10px;background-color:#f9f7eb;" >
+<p class="p2" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#2b2928;text-align:left;font-size:14px;line-height:26px;font-weight:normal;Margin-bottom:20px;" >Груз упакован надлежащим образом и застрахован на полную стоимость товара, поэтому при получении внимательно осмотрите упаковку. Если Вы заметите какие-либо механические повреждения упаковки, вскройте груз в присутствии сотрудника транспортной компании и осмотрите товар. Если товар также повреждён, то составьте акт о возмещении стоимости испорченного товара и сделайте также фотографию повреждённой упаковки и груза, после чего свяжитесь с нами. </p>
+<p class="p2" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#2b2928;text-align:left;font-size:14px;line-height:26px;font-weight:normal;Margin-bottom:20px;" >
 За все годы работы с транспортными компаниями таких случаев было всего 2, но мы считаем, что необходимо сообщать о возможных рисках покупателю. </p> </div> 
     </td>
 </tr>
@@ -127,16 +127,16 @@
 </tr>
 
 <tr>
-    <td height="145" align="center" valign="middle"style="padding-left: 10px;padding-right: 10px;padding-top: 20px;padding-bottom: 20px;">
-        <p class="p1">C уважением, Ваш персональный менеджер Куратова Софья Игоревна, +7(900) 605-65-43 <br />
-Наш сайт: <a href="" target="_blank">https://maxcuprum.ru/</a><br />
+    <td height="145" align="center" valign="middle" style="padding-left:10px;padding-right:10px;padding-top:20px;padding-bottom:20px;" >
+        <p class="p1" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#2b2928;text-align:center;font-size:14px;line-height:26px;font-weight:normal;Margin-bottom:10px;" >C уважением, Ваш персональный менеджер Куратова Софья Игоревна, +7(900) 605-65-43 <br />
+Наш сайт: <a href="" target="_blank" style="color:#beab6e;" >https://maxcuprum.ru/</a><br />
 Бесплатный звонок по России по номеру 88005501871
 </p>
     </td>
 </tr>
 <tr>
-    <td align="center" valign="top"><center>
-        <img src="bottom.jpg" alt="" width="938" height="516" align="center" class="img600" /></center></td>
+    <td align="center" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" ><center>
+        <img src="https://fomenko2v.github.io/max_cuprum/bottom.jpg" alt="" width="938" height="516" align="center" class="img600" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:600px;height:auto;" /></center></td>
 </tr>
 </table>
     
