--- a/index.html
+++ b/index.html
@@ -101,10 +101,14 @@
 <table class="outer300" align="right" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0;width:100%;max-width:300px;border-collapse:collapse;" >
 <tr>
     <td style="padding-top:20px;padding-bottom:20px;padding-right:0;padding-left:0;" >
-        <div style="padding-top:20px;padding-bottom:5px;padding-left:10px;background-color:#f9f7eb;" >
+<table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
+    <tr>
+    <td style="padding-top:20px;padding-bottom:5px;padding-left:10px;background-color:#f9f7eb;padding-right:0;" >
 <p class="p2" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#2b2928;text-align:left;font-size:14px;line-height:26px;font-weight:normal;Margin-bottom:20px;" >Груз упакован надлежащим образом и застрахован на полную стоимость товара, поэтому при получении внимательно осмотрите упаковку. Если Вы заметите какие-либо механические повреждения упаковки, вскройте груз в присутствии сотрудника транспортной компании и осмотрите товар. Если товар также повреждён, то составьте акт о возмещении стоимости испорченного товара и сделайте также фотографию повреждённой упаковки и груза, после чего свяжитесь с нами. </p>
 <p class="p2" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#2b2928;text-align:left;font-size:14px;line-height:26px;font-weight:normal;Margin-bottom:20px;" >
-За все годы работы с транспортными компаниями таких случаев было всего 2, но мы считаем, что необходимо сообщать о возможных рисках покупателю. </p> </div> 
+За все годы работы с транспортными компаниями таких случаев было всего 2, но мы считаем, что необходимо сообщать о возможных рисках покупателю. </p>
+    </td></tr>
+</table>
     </td>
 </tr>
 </table>
