--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 </tr>
 <tr>
     <td align="center" valign="top" class="good_day" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(https://fomenko2v.github.io/max_cuprum/bgi.jpg);background-position:top center;background-repeat:no-repeat;" >
+<!--[if gte mso 9]>
+  <v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
+    <v:fill type="tile" src="https://fomenko2v.github.io/max_cuprum/bgi.jpg" color="#ffffff"/>
+  </v:background>
+  <![endif]-->
 <center class="wrapper" style="width:100%;table-layout:fixed;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;" >
 <div class="webkit" style="max-width:600px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;" >
 <!--[if (gte mso 9)|(IE)]>
@@ -83,6 +88,11 @@
 </tr>
 <tr>
     <td class="cover" align="center" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(https://fomenko2v.github.io/max_cuprum/bgi2.jpg);background-position:top center;background-repeat:no-repeat;" >
+<!--[if gte mso 9]>
+  <v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
+    <v:fill type="tile" src="https://fomenko2v.github.io/max_cuprum/bgi2.jpg" color="#ffffff"/>
+  </v:background>
+  <![endif]-->
 <center class="wrapper" style="width:100%;table-layout:fixed;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;" >
 <div class="webkit" style="max-width:600px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;" >
 <!--[if (gte mso 9)|(IE)]>
