--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 </xml>
 <![endif]-->
 <style type="text/css">
-
-</style>
-<style type="text/css">
 #outlook a{
     padding:0;
 }
@@ -46,11 +43,6 @@
 </tr>
 <tr>
     <td align="center" valign="top" class="good_day" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(https://fomenko2v.github.io/max_cuprum/bgi.jpg);background-position:top center;background-repeat:no-repeat;" >
-<!--[if gte mso 9]>
-  <v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
-    <v:fill type="tile" src="https://fomenko2v.github.io/max_cuprum/bgi.jpg" color="#ffffff"/>
-  </v:background>
-  <![endif]-->
 <center class="wrapper" style="width:100%;table-layout:fixed;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;" >
 <div class="webkit" style="max-width:600px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;" >
 <!--[if (gte mso 9)|(IE)]>
@@ -88,11 +80,6 @@
 </tr>
 <tr>
     <td class="cover" align="center" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(https://fomenko2v.github.io/max_cuprum/bgi2.jpg);background-position:top center;background-repeat:no-repeat;" >
-<!--[if gte mso 9]>
-  <v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
-    <v:fill type="tile" src="https://fomenko2v.github.io/max_cuprum/bgi2.jpg" color="#ffffff"/>
-  </v:background>
-  <![endif]-->
 <center class="wrapper" style="width:100%;table-layout:fixed;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;" >
 <div class="webkit" style="max-width:600px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;" >
 <!--[if (gte mso 9)|(IE)]>
@@ -104,11 +91,14 @@
 <tr>
     <td align="right" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <!--[if (gte mso 9)|(IE)]>
-<table width="300" align="right" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
+<table width="100%" align="center" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
-<td style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+<td width="300" valign="top" align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+ <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="277" height="460" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
+</td>
+<td width="300" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <![endif]-->
-<table class="outer300" align="right" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0;width:100%;max-width:300px;border-collapse:collapse;" >
+<table width="300" align="right" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
     <td style="padding-top:20px;padding-bottom:20px;padding-right:0;padding-left:0;" >
 <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
@@ -153,6 +143,6 @@
         <img src="https://fomenko2v.github.io/max_cuprum/bottom.jpg" alt="" width="938" height="516" align="center" class="img600" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:600px;height:auto;" /></center></td>
 </tr>
 </table>
-    
+ 
 </body>
 </html>
