--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 <o:officedocumentsettings><o:allowpng/><o:pixelsperinch>96</o:pixelsperinch></o:officedocumentsettings>
 </xml>
 <![endif]-->
+<!--[if gte mso 16]>
+    <style type="text/css">
+    /* Your Outlook-specific CSS goes here. */
+    </style>
+<![endif]-->
 <style type="text/css">
+
 #outlook a{
     padding:0;
 }
