--- a/in.html
+++ b/in.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-	<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!--[if !mso]><!-->
@@ -43,6 +43,7 @@
 				<td> <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="277" height="460" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" /></td>
 			</tr>
 		</table>
-		<![endif]-->		
+		<![endif]-->	
+		<p>Вот и картинка</p>	
 	</body>
 	</html>	
