--- a/index.html
+++ b/index.html
@@ -95,14 +95,13 @@
 <![endif]-->
 <table class="outer" align="center" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0 auto;width:100%;max-width:600px;border-collapse:collapse;" >
 <tr>
-    <td align="right" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
-<!--[if (gte mso 16)|(IE)]>
-<table width="100%" align="center" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
+    <td valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+<!--[if (gte mso 9)|(IE)]>
+<table width="300" align="left" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
-<td width="300" valign="top" align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+<td valign="top" align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
  <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="277" height="460" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
-</td>
-<td width="300" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+</td></tr></table>
 <![endif]-->
 <table width="300" align="right" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
@@ -118,11 +117,6 @@
     </td>
 </tr>
 </table>
-<!--[if (gte mso 9)|(IE)]>
-</td>
-</tr>
-</table>
-<![endif]-->
 </td>
 </tr>
 </table>
