--- a/index.html
+++ b/index.html
@@ -95,14 +95,12 @@
 <![endif]-->
 <table class="outer" align="center" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0 auto;width:100%;max-width:600px;border-collapse:collapse;" >
 <tr>
-    <td valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+    <td align="left" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <!--[if (gte mso 9)|(IE)]>
-<table width="300" align="left" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
-<tr>
-<td valign="top" align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
  <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="277" height="460" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
-</td></tr></table>
 <![endif]-->
+</td>
+    <td valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <table width="300" align="right" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
     <td style="padding-top:20px;padding-bottom:20px;padding-right:0;padding-left:0;" >
