--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <![endif]-->
 <table class="outer" align="center" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0 auto;width:100%;max-width:600px;border-collapse:collapse;" >
 <tr>
-    <td align="left" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+    <td align="right" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <!--[if (gte mso 9)|(IE)]>
  <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="277" height="460" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
 <![endif]-->
