--- a/index.html
+++ b/index.html
@@ -97,21 +97,16 @@
 <tr>
     <td align="right" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <!--[if (gte mso 9)|(IE)]>
- <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="277" height="460" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
+ <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="290" height="505" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
 <![endif]-->
 </td>
-    <td valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+    <td valign="top" style="padding-top:20px;padding-bottom:20px;padding-right:0;padding-left:0;" >
 <table width="300" align="right" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
-    <td style="padding-top:20px;padding-bottom:20px;padding-right:0;padding-left:0;" >
-<table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
-    <tr>
-    <td style="padding-top:20px;padding-bottom:5px;padding-left:10px;background-color:#f9f7eb;padding-right:0;" >
+    <td style="padding-top:20px;padding-bottom:5px;padding-right:0;padding-left:10px;background-color:#f9f7eb;" >
 <p class="p2" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#2b2928;text-align:left;font-size:14px;line-height:26px;font-weight:normal;Margin-bottom:20px;" >Груз упакован надлежащим образом и застрахован на полную стоимость товара, поэтому при получении внимательно осмотрите упаковку. Если Вы заметите какие-либо механические повреждения упаковки, вскройте груз в присутствии сотрудника транспортной компании и осмотрите товар. Если товар также повреждён, то составьте акт о возмещении стоимости испорченного товара и сделайте также фотографию повреждённой упаковки и груза, после чего свяжитесь с нами. </p>
 <p class="p2" style="mso-line-height:exactly;Margin-top:0;Margin-left:0;Margin-right:0;font-family:Arial, 'HelveticaNeueCyr', Helvetica, sans-serif;color:#2b2928;text-align:left;font-size:14px;line-height:26px;font-weight:normal;Margin-bottom:20px;" >
 За все годы работы с транспортными компаниями таких случаев было всего 2, но мы считаем, что необходимо сообщать о возможных рисках покупателю. </p>
-    </td></tr>
-</table>
     </td>
 </tr>
 </table>
