--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 <![endif]-->
 <table class="outer" align="center" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0 auto;width:100%;max-width:600px;border-collapse:collapse;" >
 <tr>
-    <td align="right" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+    <td align="left" valign="middle" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <!--[if (gte mso 9)|(IE)]>
- <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="290" height="505" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
+ <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="280" height="463" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
 <![endif]-->
 </td>
     <td valign="top" style="padding-top:20px;padding-bottom:20px;padding-right:0;padding-left:0;" >
