--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;" >
 <tr>
     <td align="center" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" ><center>
-        <img src="https://fomenko2v.github.io/max_cuprum/top.jpg" alt="" width="938" height="340" align="center" class="img600" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:600px;height:auto;" /></center></td>
+        <img src="top.jpg" alt="" width="938" height="340" align="center" class="img600" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:938px;height:auto;" /></center></td>
 </tr>
 <tr>
     <td height="145" align="center" valign="middle" style="padding-left:10px;padding-right:10px;padding-top:0;padding-bottom:0;" >
@@ -48,7 +48,7 @@
     </td>
 </tr>
 <tr>
-    <td align="center" valign="top" class="good_day" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(https://fomenko2v.github.io/max_cuprum/bgi.jpg);background-position:top center;background-repeat:no-repeat;" >
+    <td align="center" valign="top" class="good_day" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(bgi.jpg);background-position:top center;background-repeat:no-repeat;" >
 <center class="wrapper" style="width:100%;table-layout:fixed;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;" >
 <div class="webkit" style="max-width:600px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;" >
 <!--[if (gte mso 9)|(IE)]>
@@ -59,7 +59,7 @@
 <table class="outer" align="center" role="presentation" cellpadding="0" cellspacing="0" border="0" style="border-spacing:0;mso-table-lspace:0pt;mso-table-rspace:0pt;Margin:0 auto;width:100%;max-width:600px;border-collapse:collapse;" >
 <tr>
 <td align="center" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
-<center><img src="https://fomenko2v.github.io/max_cuprum/arab_top.png" alt="" width="400" height="95" class="img400" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:400px;height:auto;" /></center>
+<center><img src="arab_top.png" alt="" width="400" height="95" class="img400" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:400px;height:auto;" /></center>
 </td>
 </tr>
 <tr>
@@ -71,7 +71,7 @@
 </tr>
 <tr>
 <td align="center" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
-<center><img src="https://fomenko2v.github.io/max_cuprum/arab_bottom.png" alt="" width="400" height="95" class="img400" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:400px;height:auto;" /></center>
+<center><img src="arab_bottom.png" alt="" width="400" height="95" class="img400" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:400px;height:auto;" /></center>
 </td>
 </tr>
 </table>
@@ -85,7 +85,7 @@
     </td>
 </tr>
 <tr>
-    <td class="cover" align="center" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(https://fomenko2v.github.io/max_cuprum/bgi2.jpg);background-position:top center;background-repeat:no-repeat;" >
+    <td class="cover" align="center" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-image:url(bgi2.jpg);background-position:top center;background-repeat:no-repeat;" >
 <center class="wrapper" style="width:100%;table-layout:fixed;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;" >
 <div class="webkit" style="max-width:600px;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;" >
 <!--[if (gte mso 9)|(IE)]>
@@ -97,7 +97,7 @@
 <tr>
     <td align="left" valign="middle" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
 <!--[if (gte mso 9)|(IE)]>
- <img src="https://fomenko2v.github.io/max_cuprum/boxman.jpg" alt="" width="280" height="463" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
+ <img src="boxman.jpg" alt="" width="280" height="463" style="display:block;border-width:0;-ms-interpolation-mode:bicubic;" />  
 <![endif]-->
 </td>
     <td valign="top" style="padding-top:20px;padding-bottom:20px;padding-right:0;padding-left:0;" >
@@ -133,7 +133,7 @@
 </tr>
 <tr>
     <td align="center" valign="top" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" ><center>
-        <img src="https://fomenko2v.github.io/max_cuprum/bottom.jpg" alt="" width="938" height="516" align="center" class="img600" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:600px;height:auto;" /></center></td>
+        <img src="bottom.jpg" alt="" width="938" height="516" align="center" class="img600" style="border-width:0;display:block;-ms-interpolation-mode:bicubic;width:100%;max-width:938px;height:auto;" /></center></td>
 </tr>
 </table>
  
